<resources>
    <string name="app_name">OpenData</string>
    <string name="title_activity_maps">Map</string>
    <string name="about_app_title">- About Visual Dengue -</string>
    <string name="what_is_SDG">\t\t\t\t2015 年聯合國發佈《翻轉我們的世界：2030 年永續發展方針》(
Transforming our world: the 2030 Agenda for Sustainable Development)，公佈 17 項 2030 年永續發展目標\t(Sustainable Development Goals, SDGs)、169 細項目標(targets)，從經濟成長、社會進步、環境保護三個永續發展面向，指出全球面臨共同的問題，呼籲全球合作實踐未來永續發展的目標。</string>
    <string name="what_is_SGD_pref">＃ 以上引用自：<a href="http://sdg.nuk.edu.tw/">國立高雄大學 SDGs-Inside</a></string>
    <string name="what_is_SGD_doc">＃ <a href="http://sdg.nuk.edu.tw/data/%E8%81%AF%E5%90%88%E5%9C%8B%E6%B0%B8%E7%BA%8C%E7%99%BC%E5%B1%95%E7%9B%AE%E6%A8%99%E4%B8%AD%E6%96%87%E7%BF%BB%E8%AD%AF.pdf">聯合國永續發展目標(SDGs)說明</a></string>
    <string name="sdg_3">\t\t\t\t確保健康及促進各年齡層的福祉</string>
    <string name="sdg_3_3">\t\t\t\t在西元 2030 年前，消除愛滋病、肺結核、瘧疾以及受到忽略的熱帶性疾病，並對抗肝炎，水傳染性疾病以及其他傳染疾病。</string>
    <string name="goal_1">1.透過視覺化圖表的方式推測出會影響登革熱案例發生的環境因素，以應用於事前預防作業。</string>
    <string name="goal_2">2.透過地圖的色塊警示嚴重區域，以提醒加強防護措施。</string>
    <string name="goal_3">3.利用前面兩點改善登革熱疫情，朝 SDG 發展目標邁進。</string>

</resources>
